@@ -18,10 +18,10 @@
  *   A small context variable used by the menu_position module.
  * @param $rule_matches
  *   Whether we have a matching rule or not.
- * @param $breadcrumb_set
- *   Whether the breadcrumb is set or not.
+ * @param $set_breadcrumb
+ *   Whether the breadcrumb still needs to be set or not.
  */
-function hook_menu_position_rule_alter(&$rule, &$context, &$rule_matches, &$breadcrumb_set) {
+function hook_menu_position_rule_alter(&$rule, &$context, &$rule_matches, &$set_breadcrumb) {
   // Disable the rule if we're looking at a node with a certain id.
   if ($context['node']->nid == 119) {
     $rule_matches = FALSE;
