@@ -29,11 +29,25 @@ function menu_position_page_delivery_callback_alter() {
   }
   $evaluated = TRUE;
 
-  $context = array();
-  $context['path'] = $_GET['q'];
-  if (arg(0) == 'node' && is_numeric(arg(1))) {
-    $context['node'] = node_load(arg(1));
+  // Build a small context.
+  $context = array(
+    'path' => $_GET['q'],
+    'entity_type' => NULL,
+    'bundle_name' => NULL,
+  );
+  // Determine what kind of entity page this is.
+  list($arg0, $arg1, ) = explode('/', $context['path'] . '//');
+  if ($arg0 == 'node' && is_numeric($arg1)) {
+    $context['node'] = node_load($arg1);
+    $context['entity_type'] = 'node';
+    $context['bundle_name'] = $context['node']->type;
   }
+  elseif ($arg0 == 'user' && is_numeric($arg1)) {
+    $context['user'] = user_load($arg1);
+    $context['entity_type'] = 'user';
+    $context['bundle_name'] = 'user';
+  }
+
   menu_position_evaluate_rules($context);
 }
 
@@ -59,6 +73,21 @@ function menu_position_menu() {
     'page callback' => 'menu_position_rules_form_callback',
     'type' => MENU_NORMAL_ITEM,
     'file' => 'menu_position.admin.inc',
+  );
+  $items['admin/structure/menu-position/list'] = array(
+    'title' => 'List',
+    'type' => MENU_DEFAULT_LOCAL_TASK,
+    'weight' => -10,
+  );
+  $items['admin/structure/menu-position/settings'] = array(
+    'title' => 'Settings',
+    'description' => 'Configure settings for menu positions.',
+    'access arguments' => array('administer menu positions'),
+    'page callback' => 'drupal_get_form',
+    'page arguments' => array('menu_position_settings_form'),
+    'type' => MENU_LOCAL_TASK,
+    'file' => 'menu_position.admin.inc',
+    'weight' => 10,
   );
   $items['admin/structure/menu-position/add'] = array(
     'title' => 'Add menu position rule',
@@ -96,6 +125,16 @@ function menu_position_menu() {
     'type' => MENU_CALLBACK,
     'file' => 'menu_position.admin.inc',
   );
+  if (module_exists('taxonomy')) {
+    $items['menu-position/taxonomy/autocomplete'] = array(
+      'title' => 'Autocomplete taxonomy',
+      'page callback' => 'menu_position_taxonomy_autocomplete',
+      'page arguments' => array(3, 4),
+      'access arguments' => array('access content'),
+      'type' => MENU_CALLBACK,
+      'file' => 'plugins/menu_position.taxonomy.inc',
+    );
+  }
   return $items;
 }
 
@@ -126,6 +165,11 @@ function menu_position_menu_position_rule_plugins() {
   if (module_exists('locale')) {
     $plugins['language'] = array(
       'file' => 'plugins/menu_position.language.inc',
+    );
+  }
+  if (module_exists('taxonomy')) {
+    $plugins['taxonomy'] = array(
+      'file' => 'plugins/menu_position.taxonomy.inc',
     );
   }
   return $plugins;
@@ -166,22 +210,19 @@ function menu_position_menu_link_update($link) {
 }
 
 /**
- * Evaluates all rules based on the given path.
+ * Evaluates all rules based on a given context.
  *
- * @param $path
- *   The path used to evaluate all rules.
  * @param $context
- *   The full node object if the path is a node page.
+ *   A small context variable which contains:
+ *   - path: The path of the current page.
+ *   - entity_type: If the current page is an "entity" page, the type of entity.
+ *   - bundle_name: The bundle (entity type) of the current page's entity.
+ *   - [entity]: The page's entity object, such as "node", "user", etc.
  */
 function menu_position_evaluate_rules($context = array()) {
-  $path = $context['path'];
-
-  // Retrieve the original router item.
-  $original_router_item = menu_get_item();
-
   // Sanity check: if there is no existing menu item, Drupal won't display any
   // navigation menus anyway and will error out when we try methods below.
-  if ($original_router_item === FALSE) {
+  if (menu_get_item() === FALSE) {
     return;
   }
 
@@ -190,28 +231,17 @@ function menu_position_evaluate_rules($context = array()) {
   $rules = db_query('SELECT * FROM {menu_position_rules} WHERE enabled = :enabled ORDER BY weight, rid', array(':enabled' => 1));
 
   // Retrieve the list of menus the path is already in.
-  $menu_names = db_query('SELECT menu_name FROM {menu_links} WHERE link_path = :path', array(':path' => $path))->fetchCol();
+  $menu_names = db_query('SELECT menu_name FROM {menu_links} WHERE link_path = :path', array(':path' => $context['path']))->fetchCol();
 
-  // Retrieve the main and secondary menu names.
-  $main_menu      = theme_get_setting('toggle_main_menu')      ? variable_get('menu_main_links_source', 'main-menu') : FALSE;
-  $secondary_menu = theme_get_setting('toggle_secondary_menu') ? variable_get('menu_secondary_links_source', 'user-menu') : FALSE;
-
-  // Flag that we haven't set the breadcrumb yet.
-  $breadcrumb_set = FALSE;
+  // Flag that we still need to set the breadcrumb.
+  $set_breadcrumb = TRUE;
 
   // Examine each rule and check its conditions.
   foreach ($rules as $rule) {
     if (in_array($rule->menu_name, $menu_names)) {
       // If the page is already placed in the rule's menu, skip the rule.
       $rule_matches = FALSE;
-      if ($rule->menu_name == $main_menu) {
-        // Don't override the main menu links.
-        $main_menu = FALSE;
-      }
-      if ($rule->menu_name == $secondary_menu) {
-        $secondary_menu = FALSE;
-      }
-      $breadcrumb_set = TRUE;
+      $set_breadcrumb = FALSE;
     }
     else {
       // A rule with no conditions always matches.
@@ -240,84 +270,69 @@ function menu_position_evaluate_rules($context = array()) {
     }
 
     // Let other modules manipulate the rule.
-    drupal_alter('menu_position_rule', $rule, $context, $rule_matches, $breadcrumb_set);
+    drupal_alter('menu_position_rule', $rule, $context, $rule_matches, $set_breadcrumb);
 
     // We've found a matching rule.
-    if ($rule_matches) {
-
-      // Reset the menu trail that views may have set.
-      if ($original_router_item['page_callback'] == 'views_page') {
-        $preferred = &drupal_static('menu_link_get_preferred');
-        unset($preferred[$path]);
-      }
-
-      // Retrieve menu item specified in the rule.
-      $menu_item = menu_link_load($rule->mlid);
-
-      // Sanity check: if the menu link doesn't exist abort processing the rule.
-      if (!$menu_item) {
-        continue;
-      }
-
-      // Clone the original router item, but insert our menu_position path.
-      $router_item = $original_router_item;
-      $router_item['href'] = $menu_item['link_path'];
-      // Even if we are denied access to the page, we still want to show the
-      // navigational paths to the page.
-      $router_item['access'] = TRUE;
-
-      // Get the default preferred link and save it so that it can be used in
-      // place of the rule's menu link when menu trees are rendered.
-      $preferred_link = $original_router_item;
-      menu_position_set_link($rule->rid, $preferred_link);
-
-      // Allow the rule's parent menu item to show "expanded" status.
-      menu_position_expand_parent_link($rule->plid);
-
-      // Temporarily override the original router item.
-      menu_set_item(NULL, $router_item);
-
-      // Set the theme's secondary menu links if the rule matches the secondary menu.
-      if ($rule->menu_name == $secondary_menu) {
-        $menu_depth = ($secondary_menu == $main_menu) ? 2 : 1;
-        menu_position_precache_tree($router_item, $original_router_item, $menu_item['menu_name'], $menu_depth);
-        // Mark that we no longer need to set the secondary menu's tree.
-        $secondary_menu = FALSE;
-      }
-      // Set the theme's main menu links if the rule matches the main menu.
-      if ($rule->menu_name == $main_menu) {
-        menu_position_precache_tree($router_item, $original_router_item, $menu_item['menu_name'], 1);
-        // Mark that we no longer need to set the main menu's tree.
-        $main_menu = FALSE;
-      }
-      menu_position_precache_tree($router_item, $original_router_item, $menu_item['menu_name']);
-
-      // Alter the active trail if breadcrumbs still need to be set.
-      if (!$breadcrumb_set) {
-        // Remove any menu position rules from the trail.
-        $active_trail = menu_set_active_trail();
-        array_pop($active_trail);
-        menu_set_active_trail($active_trail);
-
-        $breadcrumb_set = TRUE;
-      }
-
-      // Restore the original router item.
-      menu_set_item(NULL, $original_router_item);
+    if ($rule_matches && menu_position_activate_rule($rule, $context, $set_breadcrumb)) {
+      // Don't let other rules set the breadcrumb.
+      $set_breadcrumb = FALSE;
 
       // Don't let other rules match against this rule's menu.
       $menu_names[] = $rule->menu_name;
     }
   }
+}
 
-  // Clean-up the menu tree cache.
-  $tree = &drupal_static('menu_tree_page_data', array());
-  foreach (array_keys($tree) as $key) {
-    if (strpos($key, ':page:menu-position/')) {
-      // To save memory, clean up the cache since we won't need this data again.
-      unset($tree[$key]);
-    }
+/**
+ * Evaluates all rules based on the given path.
+ *
+ * @param $rule
+ *   The rule that should be activated.
+ * @param $context
+ *   A small context variable used by the menu_position module.
+ * @param $set_breadcrumb
+ *   Whether the breadcrumb still needs to be set or not.
+ */
+function menu_position_activate_rule($rule, $context, $set_breadcrumb) {
+  // Retrieve menu item specified in the rule.
+  $menu_item = menu_link_load($rule->mlid);
+
+  // Sanity check: if the menu link doesn't exist abort processing the rule.
+  if (!$menu_item) {
+    return FALSE;
   }
+
+  // Reset the menu trail that views may have set.
+  $original_router_item = menu_get_item();
+  if ($original_router_item['page_callback'] == 'views_page') {
+    $preferred = &drupal_static('menu_link_get_preferred');
+    unset($preferred[$context['path']]);
+  }
+
+  // Set the active path for the rule's menu.
+  menu_tree_set_path($rule->menu_name, $menu_item['link_path']);
+
+  // Get the default preferred link and save it so that it can be used in
+  // place of the rule's menu link when menu trees are rendered.
+  menu_position_set_link($rule->rid, menu_link_get_preferred());
+
+  // Allow the rule's parent menu item to show "expanded" status.
+  menu_position_expand_parent_link($rule->plid);
+
+  // Alter the active trail if breadcrumbs still need to be set.
+  if ($set_breadcrumb) {
+    // Manually set the preferred link for this path so that
+    // menu_get_active_trail() returns the proper trail.
+    $preferred_links = &drupal_static('menu_link_get_preferred');
+    $preferred_links[$_GET['q']] = menu_link_get_preferred($menu_item['link_path']);
+
+    // Remove the menu position router from the end of the trail.
+    $active_trail = menu_set_active_trail();
+    array_pop($active_trail);
+    menu_set_active_trail($active_trail);
+  }
+
+  return TRUE;
 }
 
 /**
@@ -366,50 +381,35 @@ function menu_position_get_link($path, $link = NULL) {
 }
 
 /**
- * Implements hook_translated_menu_link().
+ * Implements hook_translated_menu_link_alter().
  *
  * All of the menu items of menu position rules have their "alter" option set
  * which allows them to be altered with this hook. We "translate" the menu item
  * to have the proper URL and title for the current page.
  */
 function menu_position_translated_menu_link_alter(&$item, &$map) {
-  if ($item['module'] == 'menu_position') {
-    $menu_item = menu_position_get_link($item['link_path']);
-    // We only alter the link after its replacement has been set.
-    if (!empty($menu_item['title'])) {
-      $item['title'] = $menu_item['title'];
-      $item['href'] = $menu_item['href'];
-      $item['hidden'] = 0;
-    }
+  // Check if the rule's links are configured to be hidden.
+  switch (variable_get('menu_position_active_link_display', 'child')) {
+    case 'child':
+      if ($item['module'] == 'menu_position') {
+        $menu_item = menu_position_get_link($item['link_path']);
+        // We only alter the link after its replacement has been set.
+        if (!empty($menu_item['title'])) {
+          $item['title'] = $menu_item['title'];
+          $item['href'] = $menu_item['href'];
+          $item['hidden'] = 0;
+        }
+      }
+      elseif ($item['mlid'] == menu_position_expand_parent_link()) {
+        $item['has_children'] = 1;
+      }
+      break;
+    case 'parent':
+      if ($item['mlid'] == menu_position_expand_parent_link()) {
+        $item['localized_options']['attributes']['class'][] = 'active';
+      }
+      break;
   }
-  elseif ($item['mlid'] == menu_position_expand_parent_link()) {
-    $item['has_children'] = 1;
-  }
-}
-
-/**
- * Places a menu tree cache in place of the original router item's tree.
- */
-function menu_position_precache_tree($router_item, $original_router_item, $menu_name, $menu_depth = 0) {
-  // Copy the menu tree cache from our faked path to the original router's
-  // path. We iterate through 3 levels of menu_depth: 0 - full tree, 1 -
-  // primary links, 2 - secondary links.
-  $tree = &drupal_static('menu_tree_page_data', array());
-
-  // Create a menu tree using the menu_position path.
-  menu_tree_page_data($menu_name, $menu_depth ? $menu_depth : NULL);
-
-  // Get the cache for the tree we just generated.
-  $router_item_cid = 'links:' . $menu_name . ':page:' . $router_item['href'] . ':' . $GLOBALS['language']->language . ':' . (int) $router_item['access'] . ':' . (int) $menu_depth;
-  $cache = cache_get($router_item_cid, 'cache_menu');
-  $tree_cid = $cache->data;
-
-  // Copy the cache to the tree that contains the original router item.
-  $original_router_item_cid = 'links:' . $menu_name . ':page:' . $original_router_item['href'] . ':' . $GLOBALS['language']->language . ':' . (int) $original_router_item['access'] . ':' . $menu_depth;
-  cache_set($original_router_item_cid, $tree_cid, 'cache_menu');
-
-  // Ensure menu_tree_page_data's static cache is up-to-date as well.
-  $tree[$original_router_item_cid] = $tree[$router_item_cid];
 }
 
 /**
